Update title with Bootstrap styling.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
   <title>Hannah's Portfolio Page</title>
 </head>
 <body>
-  <h1>Hannah's Portfolio</h1>
-  <img src="img/corgicomp.jpg" alt="Corgi at a keyboard working on code">
-  <h2>My Projects</h2>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <img src="img/corgicomp.jpg" alt="Corgi at a keyboard working on code" class="rounded">
+      </div>
+      <div class="col-md-8">
+        <div class="jumbotron">
+          <h1>Hannah's Portfolio</h1>
+          <hr>
+        </div>
+      </div>
+    </div>
+  </div>      
 
+  <h2>My Projects</h2>
   <a href="https://github.com/Corgibyte/Gonigsberg"><h4>Gonigsberg</h4></a>
   <ul>
     <li>Language: Go</li>
@@ -34,6 +45,7 @@
     <li>Language: HTML and CSS</li>
     <li>A vacation review written with HTML using styles from Bootstrap.</li>
   </ul>
+  </div>
 
 </body>
 </html>
