WIP: Implement Bootstrap cards for projects.

--- a/index.html
+++ b/index.html
@@ -21,12 +21,23 @@
       
 
     <h2>My Projects</h2>
-    <a href="https://github.com/Corgibyte/Gonigsberg"><h4>Gonigsberg</h4></a>
-    <ul>
-      <li>Language: Go</li>
-      <li>An incomplete library of basic graph algorithms with an emphasis on pathfinding.</li>
-      <li>Created for a computer science independent study elective at North Seattle College.</li>
-    </ul>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Gonigsberg</h5>
+            <p class="card-text">An incomplete library of basic graph algorithms with an emphasis on pathfinding.</p>
+          </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Language: Go</li>
+              <li class="list-group-item">Created for a computer science independent study elective at North Seattle College.</li>
+            </ul>
+        <div class="card-body">
+          <a href="https://github.com/Corgibyte/Gonigsberg">GitHub Repository</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <a href="https://github.com/Corgibyte/first-webpage"><h4>My first webpage</h4></a>
     <ul>
