Add basic Bootstrap cards for all projects.

--- a/index.html
+++ b/index.html
@@ -28,34 +28,63 @@
             <h5 class="card-title">Gonigsberg</h5>
             <p class="card-text">An incomplete library of basic graph algorithms with an emphasis on pathfinding.</p>
           </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Language: Go</li>
-              <li class="list-group-item">Created for a computer science independent study elective at North Seattle College.</li>
-            </ul>
-        <div class="card-body">
-          <a href="https://github.com/Corgibyte/Gonigsberg">GitHub Repository</a>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Language: Go</li>
+            <li class="list-group-item">Created for a computer science independent study elective at North Seattle College.</li>
+          </ul>
+          <div class="card-body">
+            <a href="https://github.com/Corgibyte/Gonigsberg">GitHub Repository</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">My first webpage</h5>
+            <p class="card-text">A simple website to explore the basics of HTML.</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Language: HTML</li>            
+          </ul>
+          <div class="card-body">
+            <a href="https://github.com/Corgibyte/first-webpage">GitHub Repository</a>
+          </div>
+        </div>
+      </div>    
+
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Cookie Recipe</h5>
+            <p class="card-text">A simple cookie recipe to explore styling in HTML.</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Language: HTML and CSS</li>          
+          </ul>
+          <div class="card-body">
+            <a href="https://github.com/Corgibyte/cookies">GitHub Repository</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-    <a href="https://github.com/Corgibyte/first-webpage"><h4>My first webpage</h4></a>
-    <ul>
-      <li>Language: HTML</li>
-      <li>A simple website to explore the basics of HTML.</li>
-    </ul>
-    
-    <a href="https://github.com/Corgibyte/cookies"><h4>Cookie Recipe</h4></a>
-    <ul>
-      <li>Language: HTML</li>
-      <li>A simple cookie recipe written in HTML.</li>
-    </ul>
-
-    <a href="https://github.com/Corgibyte/vacation"><h4>Vacation Review</h4></a>
-    <ul>
-      <li>Language: HTML and CSS</li>
-      <li>A vacation review written with HTML using styles from Bootstrap.</li>
-    </ul>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Vacation Review</h5>
+            <p class="card-text">A vacation review written with HTML using styling from Bootstrap.</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Language: HTML and CSS</li>          
+          </ul>
+          <div class="card-body">
+            <a href="https://github.com/Corgibyte/vacation">GitHub Repository</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
 </body>
