Refine styling of project cards.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <h2>My Projects</h2>
     <div class="row">
-      <div class="col-md-4">
-        <div class="card">
+      <div class="col-md-4">   
+        <div class="card mb-2">
           <div class="card-body">
             <h5 class="card-title">Gonigsberg</h5>
             <p class="card-text">An incomplete library of basic graph algorithms with an emphasis on pathfinding.</p>
@@ -32,14 +32,14 @@
             <li class="list-group-item">Language: Go</li>
             <li class="list-group-item">Created for a computer science independent study elective at North Seattle College.</li>
           </ul>
-          <div class="card-body">
+          <div class="card-footer">
             <a href="https://github.com/Corgibyte/Gonigsberg">GitHub Repository</a>
           </div>
         </div>
       </div>
-
-      <div class="col-md-4">
-        <div class="card">
+      
+      <div class="col-md-4">  
+        <div class="card mb-2">
           <div class="card-body">
             <h5 class="card-title">My first webpage</h5>
             <p class="card-text">A simple website to explore the basics of HTML.</p>
@@ -47,14 +47,14 @@
           <ul class="list-group list-group-flush">
             <li class="list-group-item">Language: HTML</li>            
           </ul>
-          <div class="card-body">
+          <div class="card-footer">
             <a href="https://github.com/Corgibyte/first-webpage">GitHub Repository</a>
           </div>
         </div>
-      </div>    
+      </div>
 
       <div class="col-md-4">
-        <div class="card">
+        <div class="card mb-2">
           <div class="card-body">
             <h5 class="card-title">Cookie Recipe</h5>
             <p class="card-text">A simple cookie recipe to explore styling in HTML.</p>
@@ -62,16 +62,17 @@
           <ul class="list-group list-group-flush">
             <li class="list-group-item">Language: HTML and CSS</li>          
           </ul>
-          <div class="card-body">
+          <div class="card-footer">
             <a href="https://github.com/Corgibyte/cookies">GitHub Repository</a>
           </div>
         </div>
       </div>
+      
     </div>
 
     <div class="row">
-      <div class="col-md-4">
-        <div class="card">
+      <div class="col-md-4">      
+        <div class="card mb-2">
           <div class="card-body">
             <h5 class="card-title">Vacation Review</h5>
             <p class="card-text">A vacation review written with HTML using styling from Bootstrap.</p>
@@ -79,11 +80,11 @@
           <ul class="list-group list-group-flush">
             <li class="list-group-item">Language: HTML and CSS</li>          
           </ul>
-          <div class="card-body">
+          <div class="card-footer">
             <a href="https://github.com/Corgibyte/vacation">GitHub Repository</a>
           </div>
         </div>
-      </div>
+      </div>  
     </div>
   </div>
 
