Add content for About Me section.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
       </div>
     </div>
 
+    <h4>Background</h4>
+    <p>I was born and raised in Montana, but have found my home in the beautiful Pacific Northwest. I have many years working in clinical laboratories working with complex health information systems, specimen processing, and assisting healthcare staff with laboratory questions and problems. 
+      I enjoy technical problems and working with a team. I am currently enrolled in Epicodus' full-time full-stack program and look forward to improving my programming skills.
+    <br>
+    <br>
+    I love to ski, play video games, and spend time with my three dogs.
+    <br>
+    <br>
+    Skills: python, HTML, CSS.</p>
+    
+
+    
+
   </div>
 
 </body>
