--- a/index.html
+++ b/index.html
@@ -6,18 +6,11 @@
   <title>Hannah's Portfolio Page</title>
 </head>
 <body>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <img src="img/corgicomp.jpg" alt="Corgi at a keyboard working on code" class="rounded">
-      </div>
-      <div class="col-md-8">
-        <div class="jumbotron">
-          <h1>Hannah's Portfolio</h1>
-          <hr>
-        </div>
-      </div>
-    </div>
+  <div class="container bg-light border border-dark">
+    <div class="jumbotron bg-light">
+      <h1>Hannah Young's Portfolio</h1>
+        <hr>
+    </div>   
 
     <h4>About me</h4>
     <p>I was born and raised in Montana, but have found my home in the beautiful Pacific Northwest. I have many years working in clinical laboratories working with complex health information systems, specimen processing, and assisting healthcare staff with laboratory questions and problems. 
@@ -28,7 +21,8 @@
     <br>
     <br>
     Skills: python, HTML, CSS.</p>
-    
+
+    <hr>    
 
     <h4>My Projects</h4>
     <div class="row">
@@ -70,7 +64,7 @@
             <p class="card-text">A simple cookie recipe to explore styling in HTML.</p>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">Language: HTML and CSS</li>          
+            <li class="list-group-item">Languages: HTML and CSS</li>          
           </ul>
           <div class="card-footer">
             <a href="https://github.com/Corgibyte/cookies">GitHub Repository</a>
@@ -88,7 +82,7 @@
             <p class="card-text">A vacation review written with HTML using styling from Bootstrap.</p>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">Language: HTML and CSS</li>          
+            <li class="list-group-item">Languages: HTML and CSS</li>          
           </ul>
           <div class="card-footer">
             <a href="https://github.com/Corgibyte/vacation">GitHub Repository</a>
