--- a/index.html
+++ b/index.html
@@ -17,22 +17,19 @@
       <li class="nav-item"><a class="nav-link" href="projects.html">My projects</a></li>
     </ul>
 
-    <h4>About me</h4>
-    <p>I was born and raised in Montana, but have found my home in the beautiful Pacific Northwest. I have many years working in clinical laboratories working with complex health information systems, specimen processing, and assisting healthcare staff with laboratory questions and problems. 
-      I enjoy technical problems and working with a team. I am currently enrolled in Epicodus' full-time full-stack program and look forward to improving my programming skills.
-    <br>
-    <br>
-    I love to ski, play video games, and spend time with my three dogs.
-    <br>
-    <br>
-    Skills: python, HTML, CSS.</p>
-
-    <hr>    
-
-
-
-
-    
+    <div class="card">
+      <div class="card-body">
+        <h4 class="card-title">About me</h4>
+        <p class="card-text">I was born and raised in Montana, but have found my home in the beautiful Pacific Northwest. I have many years working in clinical laboratories working with complex health information systems, specimen processing, and assisting healthcare staff with laboratory questions and problems. 
+          I enjoy technical problems and working with a team. I am currently enrolled in Epicodus' full-time full-stack program and look forward to improving my programming skills.
+        <br>
+        <br>
+        I love to ski, play video games, and spend time with my three dogs.
+        <br>
+        <br>
+        Skills: python, HTML, CSS.</p>
+      </div>
+    </div>
 
   </div>
 
