--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <hr>
     </div>
     
-    <ul class="nav justify-content-center">
+    <ul class="nav justify-content-center bg-dark">
       <li class="nav-item"><a class="nav-link active" href="index.html">About me</a></li>
       <li class="nav-item"><a class="nav-link" href="projects.html">My projects</a></li>
     </ul>
