--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
       <li class="nav-item"><a class="nav-link active" href="index.html">About me</a></li>
       <li class="nav-item"><a class="nav-link" href="projects.html">My projects</a></li>
     </ul>
+    <hr>
 
-    <div class="card">
-      <div class="card-body">
-        <h4 class="card-title">About me</h4>
-        <p class="card-text">I was born and raised in Montana, but have found my home in the beautiful Pacific Northwest. I have many years working in clinical laboratories working with complex health information systems, specimen processing, and assisting healthcare staff with laboratory questions and problems. 
-          I enjoy technical problems and working with a team. I am currently enrolled in Epicodus' full-time full-stack program and look forward to improving my programming skills.
+    <div class="row">
+      <div class="col-md-12">
+        <img class="img float-left" src="img/corgicomp.jpg" alt="A photo of a corgi coding at a computer">
+           
+        <p>I was born and raised in Montana, but have found my home in the beautiful Pacific Northwest. I have many years working in clinical laboratories working with complex health information systems, specimen processing, and assisting healthcare staff with laboratory questions and problems. 
+            I enjoy technical problems and working with a team. I am currently enrolled in Epicodus' full-time full-stack program and look forward to improving my programming skills.
         <br>
         <br>
         I love to ski, play video games, and spend time with my three dogs.
