--- a/projects.html
+++ b/projects.html
@@ -12,9 +12,9 @@
         <hr>
     </div>
     
-    <ul class="nav justify-content-center">
-      <li class="nav-item"><a class="nav-link active" href="index.html">About me</a></li>
-      <li class="nav-item"><a class="nav-link" href="projects.html">My projects</a></li>
+    <ul class="nav justify-content-center bg-secondary">
+      <li class="nav-item"><a class="nav-link" href="index.html">About me</a></li>
+      <li class="nav-item"><a class="nav-link active" href="projects.html">My projects</a></li>
     </ul>
     
     <div class="row">
