Add image caption.

--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
 
     <div class="row">
       <div class="col-md-12">
-        <img class="img float-left" src="img/corgicomp.jpg" alt="A photo of a corgi coding at a computer">
+        <figure class="figure float-left">
+          <img class="img float-left" src="img/corgicomp.jpg" alt="A photo of a corgi coding at a computer">
+          <figcaption class="figure-caption"><strong>Not me!</strong> Corgi used as adorable placeholder</figcaption>
+        </figure>
            
         <p>I was born and raised in Montana, but have found my home in the beautiful Pacific Northwest. I have many years working in clinical laboratories working with complex health information systems, specimen processing, and assisting healthcare staff with laboratory questions and problems. 
-            I enjoy technical problems and working with a team. I am currently enrolled in Epicodus' full-time full-stack program and look forward to improving my programming skills.
+        <br>    
+        <br>
+        I enjoy technical problems and working with a team. I am currently enrolled in Epicodus' full-time full-stack program and look forward to improving my programming skills.
         <br>
         <br>
         I love to ski, play video games, and spend time with my three dogs.
