--- a/projects.html
+++ b/projects.html
@@ -56,14 +56,13 @@
             <p class="card-text">A simple cookie recipe to explore styling in HTML.</p>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">Languages: HTML and CSS</li>          
+            <li class="list-group-item lang-item">Languages: HTML and CSS</li>          
           </ul>
           <div class="card-footer">
             <a href="https://github.com/Corgibyte/cookies">GitHub Repository</a>
           </div>
         </div>
       </div>
-      
     </div>
 
     <div class="row">
