--- a/index.html
+++ b/index.html
@@ -28,13 +28,18 @@
         <p>I was born and raised in Montana, but have found my home in the beautiful Pacific Northwest. I have many years working in clinical laboratories working with complex health information systems, specimen processing, and assisting healthcare staff with laboratory questions and problems. 
         <br>    
         <br>
-        I enjoy technical problems and working with a team. I am currently enrolled in Epicodus' full-time full-stack program and look forward to improving my programming skills.
+        I enjoy technical problems and working with a team. I am currently enrolled in Epicodus's full-time full-stack program and look forward to improving my programming skills.
         <br>
         <br>
-        I love to ski, play video games, and spend time with my three dogs.
+        I <em>love</em> to ski, play video games, and spend time with my three dogs.
         <br>
         <br>
-        Skills: python, HTML, CSS.</p>
+        Skills:</p>
+        <ol>
+          <li>python</li>
+          <li>HTML</li>
+          <li>CSS, including Bootstrap</li>
+        </ol>
       </div>
     </div>
 
