--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
         <div class="card mb-2">
           <div class="card-body">
             <h5 class="card-title">Gonigsberg</h5>
-            <p class="card-text">An incomplete library of basic graph algorithms with an emphasis on pathfinding.</p>
+            <p class="card-text">An <span class="emphasized-text">incomplete</span> library of basic graph algorithms with an emphasis on pathfinding.</p>
           </div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">Language: Go</li>
@@ -56,7 +56,7 @@
             <p class="card-text">A simple cookie recipe to explore styling in HTML.</p>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item lang-item">Languages: HTML and CSS</li>          
+            <li class="list-group-item">Languages: HTML and CSS</li>          
           </ul>
           <div class="card-footer">
             <a href="https://github.com/Corgibyte/cookies">GitHub Repository</a>
