--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
   <div class="container bg-light border border-dark">
     <div class="jumbotron bg-light">
-      <h1>Hannah Young's Portfolio</h1>
+      <h1>Hannah Young</h1>
+      <p class="lead">Portfolio website</p>
       <hr>
     </div>
     
