WIP: Attempt to put image behind text on project cards.

--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,8 @@
     
     <div class="card-deck">      
       <div class="card mb-2">
-        <div class="card-body">
+        <img class="card-img" src="img/bridges.jpg" alt="Bridges of Konigsberg">
+        <div class="card-img-overlay">
           <h5 class="card-title">Gonigsberg</h5>
           <p class="card-text">An <span class="emphasized-text">incomplete</span> library of basic graph algorithms with an emphasis on pathfinding.</p>          
         </div>
