BUGFIX: Update wrong jumbotron on projects.html.

--- a/projects.html
+++ b/projects.html
@@ -8,8 +8,9 @@
 <body>
   <div class="container bg-light border border-dark">
     <div class="jumbotron bg-light">
-      <h1>Hannah Young's Portfolio</h1>
-        <hr>
+      <h1>Hannah Young</h1>
+      <p class="lead">Portfolio website</p>
+      <hr>
     </div>
     
     <ul class="nav justify-content-center bg-secondary">
