--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,7 @@
     <ul class="nav justify-content-center bg-secondary">
       <li class="nav-item"><a class="nav-link" href="index.html">About me</a></li>
       <li class="nav-item"><a class="nav-link active" href="projects.html">My projects</a></li>
+      <li class="nav-item"><a class="nav-link" href="http://github.com/Corgibyte">GitHub</a></li>
     </ul>
     
     <div class="card-deck">      
