BUFIX: Fixed skills list wrapping bizarrely.

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
         I enjoy technical problems and working with a team. I am currently enrolled in Epicodus's full-time full-stack program and look forward to improving my programming skills.
         <br>
         <br>
-        I <em>love</em> to ski, play video games, and spend time with my three dogs.
-        <br>
-        <br>
-        Skills:</p>
-        <ol>
-          <li>python</li>
-          <li>HTML</li>
-          <li>CSS, including Bootstrap</li>
-        </ol>
+        I <em>love</em> to ski, play video games, and spend time with my three dogs.</p>
+        <div id="skills">
+          <h6>Skills:</h6>
+          <ol>
+            <li>python</li>
+            <li>HTML</li>
+            <li>CSS, including Bootstrap</li>
+          </ol>
+        </div>
       </div>
     </div>
 
